2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Solver class destructor virtual.
	* include/roboptim/core/solver.hh: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing initialization list.
	* src/result-with-warnings.cc: Here.

2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean finite difference gradient code.
	* src/finite-difference-gradient.cc: Fix typo and use
	norm_inf from uBlas instead of computing it manually.

2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance finite difference computation.
	* include/roboptim/core/finite-difference-gradient.hh:
	Add BadGradient exception class and add checkGradientAndThrow
	free function.
	* src/finite-difference-gradient.cc: Implement new class and free
	function.

2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance finite difference gradient computaton.
	* include/roboptim/core/finite-difference-gradient.hh:
	Add missing const in checkGradient signature, fix default
	epsilon and threshold.
	* src/finite-difference-gradient.cc: Remove useless
	test in finite difference gradient computation, be
	more strict about allowed epsilon values.
	* tests/finite-difference-gradient.stdout: Regenerate.

2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Display function's names in Gnuplot.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Dislay function's name.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout:
	Regenerate.

2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Use fixed point display for floating-point numbers in Gnuplot.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Use fixed point display.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout: Regenerate.

2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Add method to build a discrete interval from an interval and a step.